--- a/Ansible_Nagios_Deploy/files/template.cfg
+++ b/Ansible_Nagios_Deploy/files/template.cfg
@@ -13,10 +13,10 @@ define host{
                                                         ; This host definition will inherit all variables that are defined
                                                         ; in (or inherited by) the linux-server host template definition.
         host_name               {{ ansible_hostname }}
-        alias                   {{ ansible_hostname }} ( {{ servers[ansible_hostname].client }} {{ servers[ansible_hostname].environment }}  {{ servers[ansible_hostname].roles | join(',') }} Server)
-        address                 {{ servers[ansible_hostname].ip }}
-        parents                 {{ servers[ansible_hostname].client }}
-        hostgroups              {{ servers[ansible_hostname].roles | join(',') }}
+        alias                   {{ ansible_hostname }} ( {{ group_names[0].split('_')[0] }} {{ group_names[0].split('_')[1] }} {{ server_roles.stdout_lines | join(',') }} Server)
+        address                 {{ ansible_default_ipv4.address }}
+        parents                 
+        hostgroups              {{ server_roles.stdout_lines | join(',') }},{{ group_names[0].split('_')[0] }},{{ group_names[0].split('_')[1] }}
         }
 
 ###############################################################################
@@ -30,7 +30,7 @@ define host{
 # template for this host
 define service{
         name                            {{ ansible_hostname }}-service
-        use                             {{ servers[ansible_hostname].environment }}-service
+        use                            {{ group_names[0].split('_')[1] }}-service
         host_name                       {{ ansible_hostname }}
         notifications_enabled           1
         register                        0
